--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+.white {
+    position: absolute;
+    top: 150px;
+    z-index: -1;
+
+    width: 100%;
+    height: calc(100vh - 150px);
+
+    background-color: #d9dbd4;
+}
+
+.green {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+
+    width: 100%;
+    height: 150px;
+
+    background-color: #009688;
+}
+
+.container .row {
+    --bs-gutter-x: 0;
+}
 /* Milestone 1
 Replica della grafica con la possibilità di avere messaggi scritti dall’utente (verdi) e dall’interlocutore (bianco) assegnando due classi CSS diverse
 Visualizzazione dinamica della lista contatti: tramite la direttiva v-for, visualizzare nome e immagine di ogni contatto
@@ -5,3 +30,85 @@ Visualizzazione dinamica della lista contatti: tramite la direttiva v-for, visua
 Milestone 2
 Visualizzazione dinamica dei messaggi: tramite la direttiva v-for, visualizzare tutti i messaggi relativi al contatto attivo all’interno del pannello della conversazione
 Click sul contatto mostra la conversazione del contatto cliccato */
+
+#user, .chat-contatti {
+    background-color: #eaeaea;
+}
+
+/* #USER */
+.header {
+    padding: 10px 25px 10px 10px;
+}
+
+.header-img {
+    width: 52px;
+    border-radius: 50%;
+}
+
+.header .fa-solid {
+    font-size: 23px;
+    color: #b1b1b1;
+}
+/* FINE #USER */
+
+/* NOTIFICHE */
+#notifiche {
+    background-color: #8edafc;
+    padding: 15px 20px;
+}
+
+#notifiche .fa-solid {
+    font-size: 22px;
+    padding: 15px 11px;
+    border-radius: 50%;
+    background-color: white;
+    color: #8edafc;
+}
+
+#notifiche a {
+    font-size: 0.8em;
+    color: grey;
+}
+/* FINE NOTIFICHE */
+
+
+/* CONTATTI */
+#cerca-contatti {
+    padding: 7px;
+    background-color: #fafafa;
+}
+
+#cerca-contatti button {
+    background-color: white;
+}
+
+#contatti li {
+    padding: 10px 20px;
+}
+
+#contatti img {
+    width: 62px;
+    border-radius: 50%;
+}
+/* FINE CONTATTI */
+
+
+.messaggi {
+    background-image: url("../img/mine.jpg");
+}
+
+main {
+    position: relative;
+}
+
+.input-text {
+    padding: 10px 20px;
+    background-color: #f3eeea;
+}
+
+.input-text .fa-solid,
+.input-text .fa-regular {
+    font-size: 20px;
+    margin-inline: 20px;
+    color: #6b7376;
+}
