--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,18 @@
 .container .row {
     --bs-gutter-x: 0;
 }
-/* Milestone 1
-Replica della grafica con la possibilità di avere messaggi scritti dall’utente (verdi) e dall’interlocutore (bianco) assegnando due classi CSS diverse
-Visualizzazione dinamica della lista contatti: tramite la direttiva v-for, visualizzare nome e immagine di ogni contatto
 
-Milestone 2
-Visualizzazione dinamica dei messaggi: tramite la direttiva v-for, visualizzare tutti i messaggi relativi al contatto attivo all’interno del pannello della conversazione
-Click sul contatto mostra la conversazione del contatto cliccato */
+#ui-wrapper {
+    width: 100vw;
+    height: 100vh;
+
+    padding: 25px;
+}
+
+main .row {
+    height: 100%;
+}
+
 
 #user, .chat-contatti {
     background-color: #eaeaea;
@@ -99,11 +104,61 @@ Click sul contatto mostra la conversazione del contatto cliccato */
 }
 /* FINE CONTATTI */
 
+.active-chat {
+    height: 100%;
+}
 
 .chat {
     background-image: url("../img/mine.jpg");
-    height: 738px;
+    height: calc(100% - 52px - 38px);
 }
+
+.chat .messaggi {
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+    gap: 10px;
+
+    max-width: 800px;
+
+    margin: 0 auto;
+
+    padding: 50px 20px;
+}
+
+
+/* message */
+
+.message {
+    position: relative;
+
+    max-width: 320px;
+    min-width: 100px;
+
+    border-radius: 8px;
+    background-color: #d5f9ba;
+
+    padding: 18px 16px;
+}
+
+.message .time {
+    position: absolute;
+    bottom: 6px;
+    right: 6px;
+
+    font-size: 7px;
+    color: #999;
+}
+
+.message.sent {
+    align-self: flex-end;
+}
+
+.message.received {
+    background-color: white;
+}
+
+/* /message */
 
 main {
     position: relative;
