--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,13 @@
     padding: 25px;
 }
 
+/* Milestone 3
+
+Aggiunta di un messaggio: l’utente scrive un testo nella parte bassa e digitando “enter” il testo viene aggiunto al thread sopra, come messaggio verde
+
+Risposta dall’interlocutore: ad ogni inserimento di un messaggio, l’utente riceverà un “ok” come risposta, che apparirà dopo 1 secondo. */
+
+
 main .row {
     height: 100%;
 }
@@ -124,6 +131,7 @@ main .row {
     margin: 0 auto;
 
     padding: 50px 20px;
+
 }
 
 
