aggiunti commenti e filtro contatti da migliorare

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,15 @@ main .row {
 /* FINE NOTIFICHE */
 
 
+.filtro-contatti {
+    background-color: #eaeaea;
+    top: 40px;
+    left: 45px;
+    /* width: 88%; */
+    cursor: pointer;
+}
+
+
 /* CONTATTI */
 #cerca-contatti {
     padding: 7px;
